incorporated feedback button into footer div Set footer to "fixed". Intend to move "reagents" text to be more responsive (thinking "Text-align:center", but that didn't work)

--- a/seumich/static/seumich/styles/main.css
+++ b/seumich/static/seumich/styles/main.css
@@ -394,7 +394,7 @@ th[scope="row"] {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
